--- a/AtkTennisWeb/Views/Public/SignIn.cshtml
+++ b/AtkTennisWeb/Views/Public/SignIn.cshtml
@@ -121,7 +121,7 @@
                                 });
                             }
                             else {
-                                window.location.href = "../Home/Index";
+                                window.location.href = "../AdminHome/Index";
                             }
                         }
                     });
@@ -165,7 +165,7 @@
                         localStorage.setItem("loginCheck", check);
                         
                       
-                        window.location.href = "../Home/Index";
+                        window.location.href = "../AdminHome/Index";
                     }
 
                     else
