--- a/AtkTennisWeb/Views/SystemSettings/EducationSchoolSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/EducationSchoolSettings.cshtml
@@ -112,7 +112,7 @@
 
 
 
-                    <div id="@Model.schoolTypes[0].Code" class="tabcontent">
+                    @*<div id="@Model.schoolTypes[0].Code" class="tabcontent">
                         <div class="card">
                             <div class="card-header d-flex justify-content-between">
                                 <div class="card-title">
@@ -283,7 +283,7 @@
                                 </table>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
             </div>
         </div>
