--- a/AtkTennisWeb/Views/Shared/_MemberLayout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_MemberLayout.cshtml
@@ -50,7 +50,7 @@
     <div class="wrapper">
 
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light" style="margin-left:0px">
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item">
@@ -76,26 +76,26 @@
                                 <li><a href="~/SystemSettings/EducationPrivateLessonSettings" class="dropdown-item">Özel Ders</a></li>
                             </ul>
                         </li>
-                        @*<li class="dropdown-submenu dropdown-hover">
-                                <a id="dropdownSubMenu2" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle">Öğrenci Gel. Tak. Ayarları</a>
-                                <ul aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
+                        <li class="dropdown-submenu dropdown-hover">
+                            <a id="dropdownSubMenu2" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="dropdown-item dropdown-toggle">Öğrenci Gel. Tak. Ayarları</a>
+                            <ul aria-labelledby="dropdownSubMenu2" class="dropdown-menu border-0 shadow">
 
-                                    <li><a href="#" class="dropdown-item">Antreman Havuzu</a></li>
-                                    <li><a href="#" class="dropdown-item">Fiziksel Çalışmalar</a></li>
-                                    <li><a href="#" class="dropdown-item">Oyunlar</a></li>
-                                    <li><a href="#" class="dropdown-item">Gelişim Formları</a></li>
-                                    <li><a href="#" class="dropdown-item">İçerik İşlemleri</a></li>
-                                </ul>
-                            </li>*@
+                                <li><a href="#" class="dropdown-item">Antreman Havuzu</a></li>
+                                <li><a href="#" class="dropdown-item">Fiziksel Çalışmalar</a></li>
+                                <li><a href="#" class="dropdown-item">Oyunlar</a></li>
+                                <li><a href="#" class="dropdown-item">Gelişim Formları</a></li>
+                                <li><a href="#" class="dropdown-item">İçerik İşlemleri</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">Danışma</a>
                     <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
-                        <li><a href="~/AdminHome/NewRegister" class="dropdown-item">Yeni Kullanıcı Kayıt</a></li>
-                        <li><a href="~/AdminHome/ListUser" class="dropdown-item">Kullanıcı Listeleri</a></li>
-                        @*<li><a href="~/AdminHome/ListUser" class="dropdown-item">Üye Listeleri</a></li>
-                            <li><a href="#" class="dropdown-item">Öğrenci Listleri</a></li>*@
+                        <li><a href="~/AdminHome/NewRegister" class="dropdown-item">Yeni Üye Kayıt</a></li>
+                        <li><a href="~/AdminHome/ListUser" class="dropdown-item">Üye Listeleri</a></li>
+                        <li><a href="#" class="dropdown-item">Öğrenci Kayıt</a></li>
+                        <li><a href="#" class="dropdown-item">Öğrenci Listleri</a></li>
                     </ul>
                 </li>
 
@@ -103,9 +103,9 @@
                     <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">Rezervasyonlar</a>
                     <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
                         <li><a href="~/Public/Reservation?date=@date" class="dropdown-item">Rezervasyon Yap</a></li>
-                        <li><a href="~/Public/ReservationList" class="dropdown-item">Rezervasyon Listem</a></li>
-                        @*<li><a href="#" class="dropdown-item">Rezervasyon İptali</a></li>
-                            <li><a href="#" class="dropdown-item">Üyelik Aidatlarım</a></li>*@
+                        <li><a href="#" class="dropdown-item">Rezervasyon Listem</a></li>
+                        <li><a href="#" class="dropdown-item">Rezervasyon İptali</a></li>
+                        <li><a href="#" class="dropdown-item">Üyelik Aidatlarım</a></li>
                     </ul>
                 </li>
             </ul>
@@ -181,265 +181,7 @@
 
                 </li>
             </ul>
-
-
-
         </nav>
-
-
-        <aside class="main-sidebar sidebar-dark-primary elevation-4">
-            <!-- Brand Logo -->
-            <a href="#" class="brand-link">
-                <img src="~/adminRoot/images/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">
-                    @if (Mutuals.CompName == null)
-                    {@Html.Raw("---------------")}
-                else
-                { @Mutuals.CompName}
-                </span>
-            </a>
-
-            <!-- Sidebar -->
-            <div class="sidebar">
-                <!-- Sidebar user panel (optional) -->
-                <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                    <div class="image">
-                        <i style="font-size:30px; color:white;" class="fas fa-user"></i>
-                    </div>
-                    <div class="info">
-                        <a href="#" class="d-block">@fullname</a>
-                    </div>
-                </div>
-
-
-                <!-- Sidebar Menu -->
-                <nav class="mt-2">
-                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                        <!-- Add icons to the links using the .nav-icon class with font-awesome or any other icon font library -->
-
-
-                        @if (Mutuals.UserSettings[HttpContextAccessor.HttpContext.Session.GetString("RoleId")].Dashboard)
-                        {
-                            <li class="nav-item menu-open">
-                                <a style="background-color:#d4ff0761" href="~/AdminHome/Index" class="nav-link active">
-                                    <i class="nav-icon fas fa-tachometer-alt"></i>
-                                    <p>
-                                        Yönetim Bilgi Ekranı
-                                        <i class="right fas fa-table"></i>
-                                    </p>
-                                </a>
-                            </li>
-                        }
-
-                        <li class="nav-item">
-                            <a href="/Public/MemberInf" class="nav-link">
-                                <i class="fas fa-id-card nav-icon"></i>
-                                <p>Kullanıcı Bilgilerim </p>
-                            </a>
-                        </li>
-
-                        @if (Mutuals.UserSettings[HttpContextAccessor.HttpContext.Session.GetString("RoleId")].Advisory)
-
-                        {
-                            <li class="nav-item menu-is-opening ">
-                                <a href="#" class="nav-link">
-                                    <i class="nav-icon fas fa-user-circle"></i>
-                                    <p>
-                                        Danışma
-                                        <i class="fas fa-angle-left right"></i>
-                                    </p>
-                                </a>
-                                <ul class="nav nav-treeview">
-                                    <li class="nav-item">
-                                        <a href="~/AdminHome/NewRegister" class="nav-link">
-                                            <i class="fas fa-plus nav-icon"></i>
-                                            <p>Yeni Kullanıcı Kayıt</p>
-                                        </a>
-                                    </li>
-
-
-                                    <li class="nav-item">
-                                        <a href="~/AdminHome/ListUser" class="nav-link">
-                                            <i class="fas fa-list-ol nav-icon"></i>
-                                            <p>Kullanıcılar Genel Liste</p>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                        }
-
-                        <li class="nav-item  menu-is-opening">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-bell"></i>
-                                <p>
-                                    Rezervasyonlar
-                                    <i class="fas fa-angle-left right"></i>
-
-                                </p>
-                            </a>
-
-                            <ul class="nav nav-treeview">
-
-
-
-                                <li class="nav-item">
-                                    <a href="~/Public/Reservation?date=@date" class="nav-link">
-                                        <i class="fas fa-calendar-check nav-icon"></i>
-                                        <p>Rezervasyon Yap</p>
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="~/Public/ReservationList" class="nav-link">
-                                        <i class="fas fa-table nav-icon"></i>
-                                        <p>Rezervasyon Listem</p>
-                                    </a>
-                                </li>
-
-                                @*<li class="nav-item">
-                                        <a href="~/Admin/ReservationTable" class="nav-link">
-                                            <i class="far fa-window-close nav-icon"></i>
-                                            <p>Rezervasyon İptali</p>
-                                        </a>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a href="~/Admin/ReservationTable" class="nav-link">
-                                            <i class="fas fa-wallet nav-icon"></i>
-                                            <p>Üyelik Aidatlarım</p>
-                                        </a>
-                                    </li>*@
-                            </ul>
-                        </li>
-
-
-
-                        @if (Mutuals.UserSettings[HttpContextAccessor.HttpContext.Session.GetString("RoleId")].SystemSettings)
-                        {
-                            <li class="nav-item ">
-                                <a href="#" class="nav-link">
-                                    <i class="nav-icon fas fa-cog"></i>
-                                    <p>
-                                        Sistem Ayarları
-                                        <i class="right fas fa-angle-left"></i>
-                                    </p>
-                                </a>
-
-                                <ul class="nav nav-treeview">
-
-                                    <li class="nav-item">
-                                        <a href="~/SystemSettings/IdentityRoleSettings" class="nav-link">
-                                            <i class="fas fa-id-card nav-icon"></i>
-                                            <p>Rol ve Yetkilendirme </p>
-                                        </a>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a href="~/SystemSettings/CourtSettings" class="nav-link">
-                                            <i class="fas fa-flag nav-icon"></i>
-                                            <p>Kort Ayarları </p>
-                                        </a>
-                                    </li>
-
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link">
-                                            <i class="nav-icon fas fa-table-tennis"></i>
-                                            <p>
-                                                Eğitim Ayarları
-                                                <i class="right fas fa-angle-left"></i>
-                                            </p>
-                                        </a>
-                                        <ul class="nav nav-treeview">
-                                            <li class="nav-item">
-                                                <a href="~/SystemSettings/EducationSchoolSettings" class="nav-link">
-                                                    <i class="far fa-circle nav-icon"></i>
-                                                    <p>Okul</p>
-                                                </a>
-                                            </li>
-
-                                            <li class="nav-item">
-                                                <a href="~/SystemSettings/EducationPerformanceSettings" class="nav-link">
-                                                    <i class="far fa-circle nav-icon"></i>
-                                                    <p>Performans</p>
-                                                </a>
-                                            </li>
-
-
-                                            <li class="nav-item">
-                                                <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
-                                                    <i class="far fa-circle nav-icon"></i>
-                                                    <p>Özel Ders</p>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
-
-                                    @*<li class="nav-item">
-                                            <a href="#" class="nav-link">
-                                                <i class="nav-icon fas fa-chalkboard-teacher"></i>
-                                                <p>
-                                                    Öğr. Gel. ve Tak. Ayar.
-                                                    <i class="right fas fa-angle-left"></i>
-                                                </p>
-                                            </a>
-                                            <ul class="nav nav-treeview">
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationSchoolSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>Antreman Havuzu</p>
-                                                    </a>
-                                                </li>
-
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationPerformanceSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>Fiziksel Çalışmalar</p>
-                                                    </a>
-                                                </li>
-
-
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>Oyunlar</p>
-                                                    </a>
-                                                </li>
-
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>Gelişim Formları</p>
-                                                    </a>
-                                                </li>
-
-                                                <li class="nav-item">
-                                                    <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
-                                                        <i class="far fa-circle nav-icon"></i>
-                                                        <p>İçerik İşlemleri</p>
-                                                    </a>
-                                                </li>
-                                            </ul>
-                                        </li>*@
-
-                                    <li class="nav-item">
-                                        <a href="~/SystemSettings/ReservationSettings" class="nav-link">
-                                            <i class="fas fa-bell nav-icon"></i>
-                                            <p>Reservasyon Ayarları </p>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                            </li>
-                        }
-
-                    </ul>
-                </nav>
-                <!-- /.sidebar-menu -->
-            </div>
-            <!-- /.sidebar -->
-        </aside>
-
-
 
         <div class="section">
             @*<main role="main" class="pb-3">*@
